Fix button component contrast for accessibility reasons

--- a/client/src/components/common/Button/Button.module.scss
+++ b/client/src/components/common/Button/Button.module.scss
@@ -25,7 +25,7 @@
   &:focus {
     background: var(--clr-primary);
     outline: 3px solid var(--clr-fg-light);
-    color: var(--clr-fg);
+    color: var(--clr-fg-dark);
   }
 }
 
